--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 		<title>Vite App</title>
 	</head>
 	<body>
-		
+		<canvas class="game" width="240" height="405">
+
+		</canvas>
+
 		<script type="module" src="/js/main.js"></script>
 	</body>
 </html>
