пофикшено столкновение с рамками, добавлен режим 'start' с кнопкой, режим 'game'

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 		<title>Vite App</title>
 	</head>
 	<body>
-		<canvas class="game" width="240" height="405">
-
-		</canvas>
+		<div class="game">
+			<canvas class="game-field" width="240" height="405"></canvas>
+		</div>
 
 		<script type="module" src="/js/main.js"></script>
 	</body>
