--- a/index.html
+++ b/index.html
@@ -8,9 +8,46 @@
 	</head>
 	<body>
 		<div class="game">
-			<canvas class="game-field" width="240" height="405"></canvas>
+			<div class="game__field">
+				<canvas class="canvas" width="240" height="405"></canvas>
+			</div>
+
+			<img src="assets/img/bolt-up-left.svg" alt="bolt" class="game__bolt game__bolt_up-left">
+			<img src="assets/img/bolt-up-right.svg" alt="bolt" class="game__bolt game__bolt_up-right">
+			<img src="assets/img/bolt-down-left.svg" alt="bolt" class="game__bolt game__bolt_down-left">
+			<img src="assets/img/bolt-down-right.svg" alt="bolt" class="game__bolt game__bolt_down-right">
+
+			<div class="arrows">
+				<div class="arrows__text text">
+					// use keyboard <br>
+					// arrows to play
+				</div>
+				<div class="arrows__inner">
+					<img src="assets/img/up-arrow.svg" alt="arrow" class="arrows__arrow arrows__arrow_top">
+					<img src="assets/img/left-arrow.svg" alt="arrow" class="arrows__arrow arrows__arrow_left">
+					<img src="assets/img/bot-arrow.svg" alt="arrow" class="arrows__arrow arrows__arrow_bot">
+					<img src="assets/img/right-arrow.svg" alt="arrow" class="arrows__arrow arrows__arrow_right">
+				</div>
+			</div>
+
+			<div class="food">
+				<div class="food__text text">
+					// food left
+				</div>
+				<div class="food__inner">
+					<img src="assets/img/food.svg" alt="food" class="food__img">
+					<img src="assets/img/food.svg" alt="food" class="food__img">
+					<img src="assets/img/food.svg" alt="food" class="food__img">
+					<img src="assets/img/food.svg" alt="food" class="food__img">
+					<img src="assets/img/food.svg" alt="food" class="food__img">
+					<img src="assets/img/food.svg" alt="food" class="food__img">
+					<img src="assets/img/food.svg" alt="food" class="food__img">
+					<img src="assets/img/food.svg" alt="food" class="food__img">
+					<img src="assets/img/food.svg" alt="food" class="food__img">
+					<img src="assets/img/food.svg" alt="food" class="food__img">
+				</div>
+			</div>
 		</div>
-		
 
 		<script type="module" src="/js/main.js"></script>
 	</body>
