фрукты отображаются на панели и подсвечиваются при поедании

--- a/index.html
+++ b/index.html
@@ -34,18 +34,7 @@
 				<div class="food__text text">
 					// food left
 				</div>
-				<div class="food__inner">
-					<img src="assets/img/food.svg" alt="food" class="food__img">
-					<img src="assets/img/food.svg" alt="food" class="food__img">
-					<img src="assets/img/food.svg" alt="food" class="food__img">
-					<img src="assets/img/food.svg" alt="food" class="food__img">
-					<img src="assets/img/food.svg" alt="food" class="food__img">
-					<img src="assets/img/food.svg" alt="food" class="food__img">
-					<img src="assets/img/food.svg" alt="food" class="food__img">
-					<img src="assets/img/food.svg" alt="food" class="food__img">
-					<img src="assets/img/food.svg" alt="food" class="food__img">
-					<img src="assets/img/food.svg" alt="food" class="food__img">
-				</div>
+				<div class="food__inner"></div>
 			</div>
 		</div>
 
